@@ -57,6 +57,7 @@ Version 1.5.6+svn:
     * New tile variations for Oasis.
     * New portraits for Peasant, Swordsman, Spearman.
     * The game now shows an transparent image in the new dialog when available.
+    * Properly update animated halos.
 
   * Language and translations
     * updated translations: Chinese /Simplified), Czech, Danish, Dutch, Finnish,
